# AI-Takeover

./: .gitignore  CMakeLists.txt  Element.h  Finish.cpp  Hero.h  README.md  learning.cpp  main.cpp
.github/workflows/: blank.yml
Button/: Button.cpp  Button.hpp
Files/: Level_0.txt  Level_1.txt  Level_2.txt  Level_4.txt
Level/include/: Map.h
Level/src/: Hero.cpp  Level.cpp  Map.cpp
Map/: Map.cpp  Map.hpp
Tail/: Tail.cpp  Tail.hpp
include/: Camera.h  Finish.h  Hero.h  Platform.h
src/: Camera.cpp  Element.cpp  Hero.cpp  Platform.cpp  main.cpp
test/: test.cpp
